<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>no.nav.dokdistsentralprint</groupId>
    <artifactId>dokdistsentralprint</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>

    <modules>
        <module>app</module>
        <module>schemas</module>
    </modules>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.9</version>
    </parent>

    <properties>
        <java.version>21</java.version>

        <camel.version>4.16.0</camel.version>
        <logstash-logback-encoder.version>8.1</logstash-logback-encoder.version>
        <httpclient.version>4.5.14</httpclient.version>
        <google-cloud.version>26.72.0</google-cloud.version>
        <tink.version>1.20.0</tink.version>
        <tink-gcpkms.version>1.10.0</tink-gcpkms.version>
        <com.ibm.mq.jakarta.client.version>9.4.4.0</com.ibm.mq.jakarta.client.version>
        <context-propagation.version>1.2.0</context-propagation.version>

        <dokmet-api.version>2025.06.30-07.30-22496f8</dokmet-api.version>
        <dok-legacy-tjenestespesifikasjoner.version>43-5bca208</dok-legacy-tjenestespesifikasjoner.version>

        <!-- Test -->
        <spring-cloud-contract-wiremock.version>4.3.0</spring-cloud-contract-wiremock.version>
        <commons-io.version>2.21.0</commons-io.version>
        <sshd-sftp.version>2.16.0</sshd-sftp.version>

        <!-- Plugins -->
        <maven-toolchains-plugin.version>3.2.0</maven-toolchains-plugin.version>
        <hisrc-jaxb.version>2.2.1</hisrc-jaxb.version>
        <jaxb-xew-plugin.version>2.1</jaxb-xew-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>no.nav.dokdistsentralprint</groupId>
                <artifactId>schemas</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.meldinger.virksomhet</groupId>
                <artifactId>dok-melding-virksomhet-dokdistfordeling</artifactId>
                <version>${dok-legacy-tjenestespesifikasjoner.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.tjenester</groupId>
                <artifactId>opprettoppgave-tjenestespesifikasjon</artifactId>
                <version>${dok-legacy-tjenestespesifikasjoner.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.dokmet</groupId>
                <artifactId>api</artifactId>
                <version>${dokmet-api.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.camel.springboot</groupId>
                <artifactId>camel-spring-boot-bom</artifactId>
                <version>${camel.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>net.logstash.logback</groupId>
                <artifactId>logstash-logback-encoder</artifactId>
                <version>${logstash-logback-encoder.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ibm.mq</groupId>
                <artifactId>com.ibm.mq.jakarta.client</artifactId>
                <version>${com.ibm.mq.jakarta.client.version}</version>
            </dependency>
            <!--
            google-http-java-client runtime avhengighet.
            https://github.com/googleapis/google-http-java-client/issues/1205
            -->
            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpclient</artifactId>
                <version>${httpclient.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>commons-logging</groupId>
                        <artifactId>commons-logging</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>com.google.cloud</groupId>
                <artifactId>libraries-bom</artifactId>
                <version>${google-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.google.crypto.tink</groupId>
                <artifactId>tink</artifactId>
                <version>${tink.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.crypto.tink</groupId>
                <artifactId>tink-gcpkms</artifactId>
                <version>${tink-gcpkms.version}</version>
            </dependency>
            <dependency>
                <groupId>io.micrometer</groupId>
                <artifactId>context-propagation</artifactId>
                <version>${context-propagation.version}</version>
            </dependency>

            <!-- Test -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-contract-wiremock</artifactId>
                <version>${spring-cloud-contract-wiremock.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons-io.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.sshd</groupId>
                <artifactId>sshd-sftp</artifactId>
                <version>${sshd-sftp.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-toolchains-plugin</artifactId>
                <version>${maven-toolchains-plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>toolchain</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <toolchains>
                        <jdk>
                            <version>${java.version}</version>
                            <vendor>openjdk</vendor>
                        </jdk>
                    </toolchains>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>